--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
 
 <ul>
   <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
+  <li>Coffee</li>
+  <li>Coffee</li>
 </ul>  
 
 <h2>An Ordered HTML List</h2>
