--- a/home.html
+++ b/home.html
@@ -7,9 +7,9 @@
 <h2>An Unordered HTML List</h2>
 
 <ul>
-  <li>Coffee</li>
-  <li>Coffee</li>
-  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Tea</li>
+  <li>Tea</li>
 </ul>  
 
 <h2>An Ordered HTML List</h2>
